# assistant

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
my_agent/: agent.py
my_agent/utils/: __init__.py  tools.py
tests/: test_llm.py  test_precond.py  test_tools.py
