[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "assistant"
version = "0.1.0"
description = "A LangGraph agent with internet search capabilities"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv",
    "langchain",
    "langchain-openai",
    "langgraph",
    "tavily-python",
]

[tool.setuptools]
packages = ["my_agent", "my_agent.utils"]
